Restyle header to be consistent across all pages.

--- a/index.html
+++ b/index.html
@@ -2,45 +2,43 @@
 layout: master
 title: home 
 ---
-    <header>
-      <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/header.jpg);background-position: center top;">
-        <div class="tc">
-          <div class="dib mw4 mw-12-ns mtl">
-            <a href="/" class="fade" title="home"><img src="img/logo.svg"></a>
-          </div>
-        </div>
-        <h2 class="mtn f2 mega-ns fw7 white tc ptl ptx-ns mtl">ONLINE LEARNING, HUMANIZED</h2>
-        <hr style="height:0;padding-bottom:1px;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
+{% include smallheader.html %}
 
-        <div class="cf">
-          <div class="mw5 mw7-ns tc center ">
-            <img src="img/modes.png" class="dib">
-          </div>
-        </div>
+<header>
+  <div class="link">
+  </div>
+  <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/header.jpg);background-position: center top;">
+    <h2 class="mtn f2 mega-ns fw7 white tc ptl ptx-ns mtl">ONLINE LEARNING, HUMANIZED</h2>
+    <hr style="height:0;padding-bottom:1px;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
+    <div class="cf">
+      <div class="mw5 mw7-ns tc center ">
+        <img src="img/modes.png" class="dib">
+      </div>
+    </div>
 
-        <section class="tc center mtl">
-          <div class="phm phl-ns lh-copy f4 ptm pbl br3">
-            <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=04aed0f3b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <div class="mc-field-group">
-                <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
-                  <input id="mce-EMAIL" type="email" class="wi-100 ba b--gray br2 pas required email" placeholder="example: hi@gmail.com" name="EMAIL"/>
-                </div>
-                <div id="mce-responses" class="clear">
-                  <div class="response" id="mce-error-response" style="display:none;color:#fff"></div>
-                  <div class="response" id="mce-success-response" style="display:none;color:#fff"></div>
-                </div>
-                <div class="mtm">
-                  <input type="submit" value="Find out more" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
-                </div>
-
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;"><input type="text" name="b_76d6db963f53c6373ac58a7dd_04aed0f3b7" tabindex="-1" value=""></div>
-              </form>
+    <section class="tc center mtl">
+      <div class="phm phl-ns lh-copy f4 ptm pbl br3">
+        <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=04aed0f3b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div class="mc-field-group">
+            <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
+              <input id="mce-EMAIL" type="email" class="wi-100 ba b--gray br2 pas required email" placeholder="example: hi@gmail.com" name="EMAIL"/>
             </div>
-          </section>
-        </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none;color:#fff"></div>
+              <div class="response" id="mce-success-response" style="display:none;color:#fff"></div>
+            </div>
+            <div class="mtm">
+              <input type="submit" value="Find out more" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
+            </div>
 
-    </header>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;"><input type="text" name="b_76d6db963f53c6373ac58a7dd_04aed0f3b7" tabindex="-1" value=""></div>
+        </form>
+          </div>
+    </section>
+      </div>
+</header>
+
     <main class="pbx-ns">
     <div class="cf ptx">
       <div class="center mw7 phm phl-ns">
