--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@ title: blog
 ---
 
 {% include smallheader.html %}
+{% include navbar.html %}
 
 <div class="b--light-gray bw4 tl-ns fw1 f3 mw7 center f4 mid-gray pal">
   {% for post in site.posts %}
