Update blog styles, add social share links, add little profile photos, add config.yml for site url.

--- a/about.html
+++ b/about.html
@@ -5,19 +5,17 @@ title: about
 
 {% include smallheader.html %}
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mvl">Our Story</h1>
+<h1 class="fl wi-100 f2 fw7 tc ttu mtxl">Our Story</h1>
 
-<div class="center mw7 phm phl-ns cf">
-  <p class="lh-copy serif fw1">
-Scott Forman and Jeff Kolesky founded OneRoom in the summer of 2014. They were inspired by their own experiences with online courses to build a new way to learn online that didn't feel so lonely and isolating, and that emphasizes discussion and the social experience of learning. 
-  </p>
-  <p class="lh-copy serif fw1">
-  We're based in San Francisco, and are part of the <a href="http://www.helloinnerspace.org/">Innerspace</a> community of startups.
-  </p>
+<div class="center mw8 phm phl-ns cf lh-copy serif fw1">
+  <p class="f3">Scott Forman and Jeff Kolesky founded OneRoom in the summer of 2014 with 
+  the goal of making it more human, intimate, and connected to learn online.</p>
+  <p class="f3">We're based in San Francisco, and are part of the 
+  <a class="link" href="http://www.helloinnerspace.org/">Innerspace</a> community of startups.</p>
 </div>
 
         <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
-          <h1 class="fl wi-100 b tc ttu f2 mbs mtx pvl">The Team</h1>
+          <h1 class="fl wi-100 b tc ttu f2 mbs mtx pvl">The OneRoom Team</h1>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
               <img src="img/jeff.png" class="box br-circ ba bw3 bw4-ns b--near-white db" >
