Add anchor links to writing page.

--- a/writing.html
+++ b/writing.html
@@ -37,7 +37,7 @@ title: writing
 
   <article class="fl center">
       <div class="wi-25-ns fl mrl">
-        <h1 class="mbn blue">Workshop</h1>
+        <h1 class="mbn blue"><a name="workshop">Workshop</a></h1>
         <p class="serif mrm">Bring readings or a student's work into focus for discussion.</p>
       </div>
       <img src="img/workshop.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
@@ -45,7 +45,7 @@ title: writing
 
   <article class="fl">
     <div class="wi-25-ns fl mrl">
-      <h1 class="mbn blue">Share</h1>
+      <h1 class="mbn blue"><a name="share">Share</a></h1>
       <p class="serif mrm">Share readings easily, and allow students to share their work securely.</p>
     </div>
     <img src="img/share.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
@@ -53,15 +53,15 @@ title: writing
 
   <article class="fl">
     <div class="wi-25-ns fl mrl">
-      <h1 class="mbn blue">Comment</h1>
-      <p class="serif mrm">Students can comment on one another's work, privately or publicly.</p>
+      <h1 class="mbn blue"><a name="comment">Comment</a></h1>
+      <p class="serif mrm">Students can make private notes and share comments on one another's work.</p>
     </div>
     <img src="img/comment.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
   </article>
 
   <article class="fl">
     <div class="wi-25-ns fl mrl">
-      <h1 class="mbn blue">Discuss</h1>
+      <h1 class="mbn blue"><a name="discuss">Discuss</a></h1>
       <p class="serif mrm">Facilitate live discussions with everyone on an equal footing.</p>
     </div>
     <img src="img/bradybunch.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
@@ -69,7 +69,7 @@ title: writing
 
   <article class="fl">
     <div class="wi-25-ns fl mrl">
-      <h1 class="mbn blue">Mingle</h1>
+      <h1 class="mbn blue"><a name="mingle">Mingle</a></h1>
       <p class="serif mrm">Have multiple parallel conversations in informal "mingling" mode.</p>
     </div>
     <img src="img/mingle.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
@@ -77,7 +77,7 @@ title: writing
 
   <article class="fl">
     <div class="wi-25-ns fl mrl">
-      <h1 class="mbn blue">Breakout</h1>
+      <h1 class="mbn blue"><a name="breakout">Breakout</a></h1>
       <p class="serif mrm">Break into smaller groups for planned or impromptu exercises.</p>
     </div>
     <img src="img/breakout.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
