Update team plus fix awkward sentence.

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ title: about
 
 <div class="center mw8 phm phl-ns cf lh-copy serif fw1">
   <p class="f3">Scott Forman and Jeff Kolesky founded OneRoom in the summer of 2014 with 
-  the goal of making it more human, intimate, and connected to learn online.</p>
+  the goal of making online learning more human, intimate, and connected.</p>
   <p class="f3">We're based in San Francisco, and are part of the 
   <a class="link" href="http://www.helloinnerspace.org/">Innerspace</a> community of startups.</p>
 </div>
@@ -27,12 +27,6 @@ title: about
               <img src="img/scott.png" class="box br-circ ba bw3 bw4-ns b--near-white db">
             </div>
             <h1 class="mbn f3">Scott Forman</h1>
-          </article>
-          <article class="fl tc wi-50 wi-25-ns blue mbl">
-            <div class="phl">
-              <img src="img/kristina.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db">
-            </div>
-            <h1 class="mbn f4 f3-ns">Kristina Garfinkel</h1>
           </article>
           <article class="fl tc wi-50 wi-25-ns mbs blue mbl">
             <div class="phl">
