Apply styles to links in blogpost excerpts. Remove extra blank line in .scss file.

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@ title: blog
       <img class="img mw2 v-mid box br-circ ba bw1 bw0-ns b--near-white mrm" src="/img/{{ post.image }}"></img>
       <p class="dib v-mid">{{ post.author }} &middot; {{ post.date | date: "%B %-d, %Y" }}</p>
     </div>
-    <div class="lh-copy pts">
+    <div class="lh-copy pts post">
       {{ post.excerpt }}
     </div>
   </div>
