Add Laura profile photo.

--- a/about.html
+++ b/about.html
@@ -54,6 +54,12 @@ title: about
           </article>
           <article class="fl tc wi-50 wi-25-ns blue mbl">
             <div class="phl">
+              <img src="img/laura.jpg" class="box br-circ ba bw3 bw4-ns b--near-white db" >
+            </div>
+            <h1 class="mbn f3">Laura Scott</h1>
+          </article>
+          <article class="fl tc wi-50 wi-25-ns blue mbl">
+            <div class="phl">
               <img src="img/joe.png" class="box br-circ ba bw3 bw4-ns b--near-white db" >
             </div>
             <h1 class="mbn f3">Joe Greenstein</h1>
