--- a/faq.html
+++ b/faq.html
@@ -8,4 +8,4 @@ title: FAQs
 <div class="left mw8 phm phl-ns cf lh-copy serif fw1"> 
 <p class="f4"><strong>What browser should I use?</strong></p>
 <p class="f4">Right now OneRoom only supports Google Chrome on computers. We don't (yet) run on other browsers* or devices other than computers**>.</p>
-<p class="f4">If you don't already have Google Chrome on your computer, download it here!</p>
+<p class="f4">If you don't already have Google Chrome on your computer, <a href=https://www.google.com/chrome/browser/desktop/>download it here!</a></p>
