--- a/faq.html
+++ b/faq.html
@@ -4,6 +4,7 @@ title: FAQs
 ---
 {% include smallheader.html %}
 
+# FAQs
 <h1 class="fl wi-100 f2 fw7 tc ttu mtxl">FAQs</h1>
 <div class="left mw8 phm phl-ns cf lh-copy serif fw1"> 
 <p class="f4"><strong>What browser should I use?</strong></p>
