--- a/faq.html
+++ b/faq.html
@@ -7,15 +7,18 @@ title: FAQs
 <h1 class="fl wi-100 f2 fw7 tc ttu mtxl">FAQs</h1>
 <div class="left mw8 phm phl-ns cf lh-copy serif fw1"> 
 
-<p class="f3"><strong>What browser should I use?</strong></p>
+<p class="f3"><strong>What browser should I use?</strong>
+</p>
 
 <p class="f4">Right now OneRoom only runs on Google Chrome. We don’t (yet) run on other browsers or devices other than computers. </p>
-<p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/">download it here!</a></p>
+<p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/">download it here!</a>
+</p>
 
-<p class="f3"><strong>How do I mute myself?</strong></p>
+<p class="f3"><strong>How do I mute myself?</strong>
+</p>
 
 <p class="f4">Muting is a useful tool if you’re in a noisy place, or are sick and plagued with constant coughing!
-<br>
-You’ll find the mute button in the grey bar located above the videos in your live class. The mute button looks is a mini microphone icon, and appears light grey when deactivated. 
 </p>
-<p class="f4">You'll find the mute button in the gray bar located above the videos in your live class. The mute button looks like a mini microphone icon, and appears light gray when deactivated</p>
+<p class="f4">You'll find the mute button in the gray bar located above the videos in your live class. The mute button looks like a mini microphone icon, and appears light gray when deactivated.
+<img src="locate_mute.png" alt="Finding the mute button">
+</p>
