adding image correctly

--- a/faq.html
+++ b/faq.html
@@ -20,5 +20,5 @@ title: FAQs
 <p class="f4">Muting is a useful tool if you’re in a noisy place, or are sick and plagued with constant coughing!
 </p>
 <p class="f4">You'll find the mute button in the gray bar located above the videos in your live class. The mute button looks like a mini microphone icon, and appears light gray when deactivated.
-<img src="locate_mute.png" alt="Finding the mute button">
+<img src="img/locate_mute.png" alt="Finding the mute button">
 </p>
