--- a/faq.html
+++ b/faq.html
@@ -7,18 +7,29 @@ title: FAQs
 <h1 class="fl wi-100 f2 fw7 tc ttu mtxl">FAQs</h1>
 <div class="left mw8 phm phl-ns cf lh-copy serif fw1"> 
 
-<p class="f3"><strong>What browser should I use?</strong>
+<p class="f3 center"><strong>What browser should I use?</strong>
 </p>
 
 <p class="f4">Right now OneRoom only runs on Google Chrome. We don’t (yet) run on other browsers or devices other than computers. </p>
 <p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/">download it here!</a>
 </p>
 
-<p class="f3"><strong>How do I mute myself?</strong>
+<p class="f3 center"><strong>How do I mute myself?</strong>
 </p>
 
 <p class="f4">Muting is a useful tool if you’re in a noisy place, or are sick and plagued with constant coughing!
 </p>
 <p class="f4">You'll find the mute button in the gray bar located above the videos in your live class. The mute button looks like a mini microphone icon, and appears light gray when deactivated.
-<img src="img/locate_mute.png" alt="Finding the mute button">
+	<img src="img/kayla.jpg" alt="Finding the mute button">
+When you click the button and mute yourself, you will see the microphone button turn black and a red microphone icon will appear in the top right corner of your video box.
+	<img src="img/kayla.jpg" alt="Finding the mute button">
+And, to un-mute yourself, simply click the black microphone button again!  
+</p>
+
+<p class="f3 center"><strong>How do I turn my video off? </strong>
+</p>
+
+<p class="f4">To turn your own video feed off, click the light grey button (that looks like a camera), located above the live videos. When you turn your video feed off no one will be able to see you and your video box will look like this:
+	<img src="img/kayla.jpg" alt="Finding the mute button">
+To turn your video back on, just click the camera button (now black) again. 
 </p>
