added class material photo

--- a/faq.html
+++ b/faq.html
@@ -30,6 +30,6 @@ And, to un-mute yourself, simply click the black microphone button again!
 </p>
 
 <p class="f4">To turn your own video feed off, click the light grey button (that looks like a camera), located above the live videos. When you turn your video feed off no one will be able to see you and your video box will look like this:
-	<img src="img/kayla.jpg" alt="Finding the mute button">
+	<img src="img/hide video.png" alt="Image of hidden video">
 To turn your video back on, just click the camera button (now black) again. 
 </p>
