--- a/faq.html
+++ b/faq.html
@@ -20,9 +20,9 @@ title: FAQs
 <p class="f4">Muting is a useful tool if you’re in a noisy place, or are sick and plagued with constant coughing!
 </p>
 <p class="f4">You'll find the mute button in the gray bar located above the videos in your live class. The mute button looks like a mini microphone icon, and appears light gray when deactivated.
-	<img src="img/kayla.jpg" alt="Finding the mute button">
+	<img src="img/locate_mute.png" alt="Finding the mute button.">
 When you click the button and mute yourself, you will see the microphone button turn black and a red microphone icon will appear in the top right corner of your video box.
-	<img src="img/kayla.jpg" alt="Finding the mute button">
+	<img src="img/mute_view.png" alt="What it looks like to be muted.">
 And, to un-mute yourself, simply click the black microphone button again!  
 </p>
 
