open link in new tab

--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@ title: FAQs
 </p>
 
 <p class="f4">Right now OneRoom only runs on Google Chrome. We don’t (yet) run on other browsers or devices other than computers. </p>
-<p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/">download it here!</a>
+<p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/" target="_blank">download it here!</a>
 </p>
 
 <p class="f3 center"><strong>How do I mute myself?</strong>
