--- a/faq.html
+++ b/faq.html
@@ -7,14 +7,14 @@ title: FAQs
 <h1 class="fl wi-100 f2 fw7 tc ttu mtxl">FAQs</h1>
 <div class="left mw8 phm phl-ns cf lh-copy serif fw1"> 
 
-<p class="f3 center"><strong>What browser should I use?</strong>
+<p class="f3"><center><strong>What browser should I use?</strong></center>
 </p>
 
 <p class="f4">Right now OneRoom only runs on Google Chrome. We don’t (yet) run on other browsers or devices other than computers. </p>
 <p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/" target="_blank">download it here!</a>
 </p>
 
-<p class="f3 center"><strong>How do I mute myself?</strong>
+<p class="f3"><strong>How do I mute myself?</strong>
 </p>
 
 <p class="f4">Muting is a useful tool if you’re in a noisy place, or are sick and plagued with constant coughing!
@@ -26,7 +26,7 @@ When you click the button and mute yourself, you will see the microphone button 
 And, to un-mute yourself, simply click the black microphone button again!  
 </p>
 
-<p class="f3 center"><strong>How do I turn my video off? </strong>
+<p class="f3"><strong>How do I turn my video off? </strong>
 </p>
 
 <p class="f4">To turn your own video feed off, click the light grey button (that looks like a camera), located above the live videos. When you turn your video feed off no one will be able to see you and your video box will look like this:
