--- a/faq.html
+++ b/faq.html
@@ -14,8 +14,8 @@ title: FAQs
 <p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/" target="_blank">download it here!</a>
 </p>
 
-<p class="f3"><strong>How do I mute myself?</strong>
-</p>
+<center><p class="f3"><strong>How do I mute myself?</strong>
+</p></center>
 
 <p class="f4">Muting is a useful tool if you’re in a noisy place, or are sick and plagued with constant coughing!
 </p>
@@ -26,8 +26,8 @@ When you click the button and mute yourself, you will see the microphone button 
 And, to un-mute yourself, simply click the black microphone button again!  
 </p>
 
-<p class="f3"><strong>How do I turn my video off? </strong>
-</p>
+<center><p class="f3"><strong>How do I turn my video off? </strong>
+</p></center>
 
 <p class="f4">To turn your own video feed off, click the light grey button (that looks like a camera), located above the live videos. When you turn your video feed off no one will be able to see you and your video box will look like this:
 	<img src="img/hide video.png" alt="Image of hidden video">
