--- a/faq.html
+++ b/faq.html
@@ -5,11 +5,11 @@ title: FAQs
 {% include smallheader.html %}
 
 <h1 class="fl wi-100 f2 fw7 tc ttu mtxl">FAQs</h1>
-<div class="left mw8 phm phl-ns cf lh-copy serif fw1"> 
+<div class="center mw8 phm phl-ns cf lh-copy serif fw1"> 
 
-<center><p class="f3"><strong>What browser should I use?</strong>
-</p></center>
-
+<p class="f3"><strong>What browser should I use?</strong>
+</p>
+</div>
 <p class="f4">Right now OneRoom only runs on Google Chrome. We don’t (yet) run on other browsers or devices other than computers. </p>
 <p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/" target="_blank">download it here!</a>
 </p>
