no not that! undo

--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@ title: FAQs
 {% include smallheader.html %}
 
 <h1 class="fl wi-100 f2 fw7 tc ttu mtxl">FAQs</h1>
-<div class="center mw8 phm phl-ns cf lh-copy serif fw1"> 
+<div class="left mw8 phm phl-ns cf lh-copy serif fw1"> 
 
 <p class="f3"><strong>What browser should I use?</strong>
 </p>
