--- a/faq.html
+++ b/faq.html
@@ -9,11 +9,14 @@ title: FAQs
 
 <p class="f3"><strong>What browser should I use?</strong>
 </p>
+</div>
 
+<div class="left mw10 phm phl-ns cf lh-copy serif fw1"> 
 <p class="f4">Right now OneRoom only runs on Google Chrome. We don’t (yet) run on other browsers or devices other than computers. </p>
 <p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/" target="_blank">download it here!</a>
 </p>
-
+</div>
+<div class="left mw8 phm phl-ns cf lh-copy serif fw1"> 
 <center><p class="f3"><strong>How do I mute myself?</strong>
 </p></center>
 
