--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@ title: FAQs
 </p>
 </div>
 
-<div class="left mw8 phm phl-ns cf lh-copy serif fw10"> 
+<div class="left mw8 phm phl-ns cf lh-copy serif fw1"> 
 <p class="f4">Right now OneRoom only runs on Google Chrome. We don’t (yet) run on other browsers or devices other than computers. </p>
 <p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/" target="_blank">download it here!</a>
 </p>
@@ -35,4 +35,30 @@ And, to un-mute yourself, simply click the black microphone button again!
 <p class="f4">To turn your own video feed off, click the light grey button (that looks like a camera), located above the live videos. When you turn your video feed off no one will be able to see you and your video box will look like this:
 	<img src="img/hide video.png" alt="Image of hidden video">
 To turn your video back on, just click the camera button (now black) again. 
+</p>
+
+<center><p class="f3"><strong>How do I access class materials?</strong>
+</p></center>
+
+<p class="f4">To access all your writing workshop materials, you need to be logged in to your <a href="https://app.joinoneroom.com/">OneRoom account</a>. Once logged in, you’ll be taken to your homepage where you’ll see the title of your workshop listed under “My Classes”.
+	<img src="img/Access class materials.png" alt="Image of homepage">
+To access all uploaded workshop materials, just click on the title of your class. 
+</p>
+
+<center><p class="f3"><strong>How do I upload my work?</strong>
+</p></center>
+
+<p class="f4">First, you will need to be on the class materials page.
+</p>
+
+<center><p class="f3"><strong>How do I delete my work?</strong>
+</p></center>
+
+<p class="f4">LIST OF COURSE MATERIALS
+</p>
+
+<center><p class="f3"><strong>Recommended practices:</strong>
+</p></center>
+
+<p class="f4">LIST OF COURSE MATERIALS
 </p>
