--- a/faq.html
+++ b/faq.html
@@ -60,5 +60,8 @@ To access all uploaded workshop materials, just click on the title of your class
 <center><p class="f3"><strong>Recommended practices:</strong>
 </p></center>
 
-<p class="f4">LIST OF COURSE MATERIALS
+<p class="f4"><ul>
+	<li>When in a live video class, it’s best to use headphones with a mic. This will help others hear you more clearly and cut down on excess background noise (you’ll hear others better too!).</li>
+	<li>Close other programs and tabs on your computer. The less your computer has to manage, the better! Sometimes having too many things running on your computer can decrease your video and audio quality. </li>
+</ul>
 </p>
