link to paragraph

--- a/faq.html
+++ b/faq.html
@@ -38,7 +38,7 @@ And, to un-mute yourself, simply click the black microphone button again!
 To turn your video back on, just click the camera button (now black) again. 
 </p>
 
-<center><p class="f4"><strong>How do I access class materials?</strong>
+<center><p class="f4"><a name="class materials"><strong>How do I access class materials?</strong></a>
 </p></center>
 
 <p class="f4">To access all your writing workshop materials, you need to be logged in to your <a href="https://app.joinoneroom.com/">OneRoom account</a>. Once logged in, you’ll be taken to your homepage where you’ll see the title of your workshop listed under “My Classes”.
@@ -49,7 +49,7 @@ To access all uploaded workshop materials, just click on the title of your class
 <center><p class="f4"><strong>How do I upload my work?</strong>
 </p></center>
 
-<p class="f4">First, you will need to be on the class materials page.
+<p class="f4">First, you will need to be on the <a href="#class materials">class materials page</a>.
 </p>
 
 <center><p class="f4"><strong>How do I delete my work?</strong>
