--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,7 @@ To access all uploaded workshop materials, just click on the title of your class
 <center><p class="f4"><strong>How do I upload my work?</strong>
 </p></center>
 
-<p class="f4">First, you will need to be on the <a href="#class materials">class materials page</a>.
+<p class="f4">First, you will need to be on the <a href="#class materials" style=color:"#41BDE5">class materials page</a>.
 </p>
 
 <center><p class="f4"><strong>How do I delete my work?</strong>
