--- a/faq.html
+++ b/faq.html
@@ -18,8 +18,8 @@ title: FAQs
 </div>
 
 <div class="left mw9 phm phl-ns cf lh-copy serif fw1"> 
-<center><p class="f4"><strong>How do I mute myself?</strong>
-</p></center>
+<p class="f4"><strong>How do I mute myself?</strong>
+</p>
 
 <p class="f4">Muting is a useful tool if you’re in a noisy place, or are sick and plagued with constant coughing!
 </p>
