--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@ title: FAQs
 </p>
 </div>
 
-<div class="left mw8 phm plxl cf lh-copy serif fw1"> 
+<div class="left mw8 phm plxxl cf lh-copy serif fw1"> 
 <p class="f4"><strong>How do I mute myself?</strong>
 </p>
 
