--- a/faq.html
+++ b/faq.html
@@ -5,22 +5,24 @@ title: FAQs
 {% include smallheader.html %}
 
 <h1 class="fl wi-100 f2 fw7 tc ttu mtxl">FAQs</h1>
-<div class="left mw8 phm phl-ns cf lh-copy serif fw1"> 
 
-<p class="f4"><strong>What browser should I use?</strong>
+<div class="lh-copy serif wi-100 plx">
+<p class="f4 "><strong>What browser should I use?</strong>
 </p>
 </div>
 
-<div class="left mw8 phm phl-ns cf lh-copy serif fw1"> 
+<div class="plx cf lh-copy serif fw1"> 
 <p class="f4">Right now OneRoom only runs on Google Chrome. We don’t (yet) run on other browsers or devices other than computers. </p>
 <p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/" target="_blank">download it here!</a>
 </p>
 </div>
 
-<div class="left mw8 phm plxxl cf lh-copy serif fw1"> 
+<div class="lh-copy serif wi-100 plx">
 <p class="f4"><strong>How do I mute myself?</strong>
 </p>
+</div>
 
+<div class="plx cf lh-copy serif fw1"> 
 <p class="f4">Muting is a useful tool if you’re in a noisy place, or are sick and plagued with constant coughing!
 </p>
 <p class="f4">You'll find the mute button in the gray bar located above the videos in your live class. The mute button looks like a mini microphone icon, and appears light gray when deactivated.
@@ -29,41 +31,62 @@ When you click the button and mute yourself, you will see the microphone button 
 	<img src="img/mute_view.png" alt="What it looks like to be muted.">
 And, to un-mute yourself, simply click the black microphone button again!  
 </p>
+</div>
 
-<center><p class="f4"><strong>How do I turn my video off? </strong>
-</p></center>
+<div class="lh-copy serif wi-100 plx">
+<p class="f4"><strong>How do I turn my video off? </strong>
+</p>
+</div>
 
+<div class="plx cf lh-copy serif fw1"> 
 <p class="f4">To turn your own video feed off, click the light grey button (that looks like a camera), located above the live videos. When you turn your video feed off no one will be able to see you and your video box will look like this:
 	<img src="img/hide video.png" alt="Image of hidden video">
 To turn your video back on, just click the camera button (now black) again. 
 </p>
+</div>
 
-<center><p class="f4"><a name="class materials"><strong>How do I access class materials?</strong></a>
-</p></center>
+<div class="lh-copy serif wi-100 plx">
+<p class="f4"><a name="class materials"><strong>How do I access class materials?</strong></a>
+</p>
+</div>
 
+<div class="plx cf lh-copy serif fw1"> 
 <p class="f4">To access all your writing workshop materials, you need to be logged in to your <a href="https://app.joinoneroom.com/">OneRoom account</a>. Once logged in, you’ll be taken to your homepage where you’ll see the title of your workshop listed under “My Classes”.
 	<img src="img/Access class materials.png" alt="Image of homepage">
 To access all uploaded workshop materials, just click on the title of your class. 
 </p>
+</div>
 
-<center><p class="f4"><strong>How do I upload my work?</strong>
-</p></center>
+<div class="lh-copy serif wi-100 plx">
+<p class="f4"><strong>How do I upload my work?</strong>
+</p>
+</div>
 
+<div class="plx cf lh-copy serif fw1"> 
 <p class="f4">First, you will need to be on the <a href="#class materials" style=color:"#41BDE5">class materials page</a>.
 </p>
+</div>
 
-<center><p class="f4"><strong>How do I delete my work?</strong>
-</p></center>
+<div class="lh-copy serif wi-100 plx">
+<p class="f4"><strong>How do I delete my work?</strong>
+</p>
+</div>
 
+<div class="plx cf lh-copy serif fw1"> 
 <p class="f4">LIST OF COURSE MATERIALS
 </p>
+</div>
 
-<center><p class="f4"><strong>Recommended practices:</strong>
-</p></center>
+<div class="lh-copy serif wi-100 plx">
+<p class="f4"><strong>Recommended practices:</strong>
+</p>
+</div>
 
+<div class="plx cf lh-copy serif fw1"> 
 <p class="f4"><ul>
 	<li>When in a live video class, it’s best to use headphones with a mic. This will help others hear you more clearly and cut down on excess background noise (you’ll hear others better too!).</li>
 	<br>
 	<li>Close other programs and tabs on your computer. The less your computer has to manage, the better! Sometimes having too many things running on your computer can decrease your video and audio quality. </li>
 </ul>
 </p>
+</div>
