--- a/faq.html
+++ b/faq.html
@@ -26,9 +26,11 @@ title: FAQs
 <p class="f4">Muting is a useful tool if you’re in a noisy place, or are sick and plagued with constant coughing!
 </p>
 <p class="f4">You'll find the mute button in the gray bar located above the videos in your live class. The mute button looks like a mini microphone icon, and appears light gray when deactivated.
-	<img src="img/locate_mute.png" alt="Finding the mute button.">
+	<img src="img/locate_mute.png" style="width:1266px;height:559px" alt="Finding the mute button.">
 When you click the button and mute yourself, you will see the microphone button turn black and a red microphone icon will appear in the top right corner of your video box.
-	<img src="img/mute_view.png" alt="What it looks like to be muted.">
+	<img src="img/mute_view.png" style="width:1266px;height:559px" alt="What it looks like to be muted.">
+	</p>
+<p class="f4">
 And, to un-mute yourself, simply click the black microphone button again!  
 </p>
 </div>
@@ -40,7 +42,7 @@ And, to un-mute yourself, simply click the black microphone button again!
 
 <div class="plx cf lh-copy serif fw1"> 
 <p class="f4">To turn your own video feed off, click the light grey button (that looks like a camera), located above the live videos. When you turn your video feed off no one will be able to see you and your video box will look like this:
-	<img src="img/hide video.png" alt="Image of hidden video">
+	<img src="img/hide video.png" style="width:1266px;height:559px" alt="Image of hidden video">
 To turn your video back on, just click the camera button (now black) again. 
 </p>
 </div>
@@ -52,7 +54,9 @@ To turn your video back on, just click the camera button (now black) again.
 
 <div class="plx cf lh-copy serif fw1"> 
 <p class="f4">To access all your writing workshop materials, you need to be logged in to your <a href="https://app.joinoneroom.com/">OneRoom account</a>. Once logged in, you’ll be taken to your homepage where you’ll see the title of your workshop listed under “My Classes”.
-	<img src="img/Access class materials.png" alt="Image of homepage">
+	<img src="img/Access class materials.png" style="width:1266px;height:559px" alt="Image of homepage">
+	</p>
+<p class="f4">
 To access all uploaded workshop materials, just click on the title of your class. 
 </p>
 </div>
