--- a/faq.html
+++ b/faq.html
@@ -77,7 +77,11 @@ To access all uploaded workshop materials, just click on the title of your class
 </div>
 
 <div class="plx cf lh-copy serif fw1"> 
-<p class="f4">LIST OF COURSE MATERIALS
+<p class="f4"><img src="img/completed_or_delete_uploaded_work.png" style="width:1266px;height:559px" alt="Picture of delete button">
+</p>
+
+<p class="f4">
+<img src="img/delete_upload.png" style="width:1266px;height:559px" alt="Image of deleting upload">
 </p>
 </div>
 
