--- a/faq.html
+++ b/faq.html
@@ -64,6 +64,14 @@ To access all uploaded workshop materials, just click on the title of your class
 <div class="lh-copy serif wi-100 plx">
 <p class="f4"><strong>How do I upload my work?</strong>
 </p>
+<p><img src="img/View_class_materials.png" style="width:1266px;height:559px" alt="Image of viewing class materials">
+</p>
+<p><img src="img/browsing_file_upload.png" style="width:1266px;height:559px" alt="Image of browsing files for upload.">
+</p>
+<p>
+<img src="img/naming_uploads.png" style="width:1266px;height:559px" alt="Image of naming uploads.">
+</p>
+
 </div>
 
 <div class="plx cf lh-copy serif fw1"> 
