--- a/faq.html
+++ b/faq.html
@@ -6,103 +6,127 @@ title: FAQs
 
 <h1 class="fl wi-100 f2 fw7 tc ttu mtxl">FAQs</h1>
 
-<div class="lh-copy serif wi-100 plx">
-<p class="f4 "><strong>What browser should I use?</strong>
+<div id="faq-container" class="mhxxl">
+
+<div class="lh-copy serif wi-100">
+<p class="f3"><strong>What browser should I use?</strong>
 </p>
 </div>
 
-<div class="plx cf lh-copy serif fw1"> 
+<div class="cf lh-copy serif wi-100 fw1"> 
 <p class="f4">Right now OneRoom only runs on Google Chrome. We don’t (yet) run on other browsers or devices other than computers. </p>
 <p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/" target="_blank">download it here!</a>
 </p>
 </div>
 
-<div class="lh-copy serif wi-100 plx">
-<p class="f4"><strong>How do I mute myself?</strong>
+<div class="mw10 phl phn-ns cf bt b--light-gray ptm mtx">
+
+<div class="lh-copy serif wi-100">
+<p class="f3"><strong>How do I mute myself?</strong>
 </p>
 </div>
 
-<div class="plx cf lh-copy serif fw1"> 
+<div class="cf lh-copy serif fw1"> 
 <p class="f4">Muting is a useful tool if you’re in a noisy place, or are sick and plagued with constant coughing!
 </p>
 <p class="f4">You'll find the mute button in the gray bar located above the videos in your live class. The mute button looks like a mini microphone icon, and appears light gray when deactivated.
-	<img src="img/locate_mute.png" style="width:1266px;height:559px" alt="Finding the mute button.">
+</p>
+
+	<img src="img/locate_mute.png" class="img wi-75-ns mhxl" alt="Finding the mute button.">
+	
+<p>
 When you click the button and mute yourself, you will see the microphone button turn black and a red microphone icon will appear in the top right corner of your video box.
-	<img src="img/mute_view.png" style="width:1266px;height:559px" alt="What it looks like to be muted.">
 	</p>
+	
+	<img src="img/mute_view.png" class="img wi-75-ns mhxl" alt="What it looks like to be muted.">
+	
 <p class="f4">
 And, to un-mute yourself, simply click the black microphone button again!  
 </p>
 </div>
 
-<div class="lh-copy serif wi-100 plx">
-<p class="f4"><strong>How do I turn my video off? </strong>
+<div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
+
+<div class="lh-copy serif wi-100">
+<p class="f3"><strong>How do I turn my video off? </strong>
 </p>
 </div>
 
-<div class="plx cf lh-copy serif fw1"> 
+<div class="cf lh-copy serif fw1"> 
 <p class="f4">To turn your own video feed off, click the light grey button (that looks like a camera), located above the live videos. When you turn your video feed off no one will be able to see you and your video box will look like this:
-	<img src="img/hide video.png" style="width:1266px;height:559px" alt="Image of hidden video">
+	</p>
+	
+	<img src="img/hide video.png" class="img wi-75-ns mhxl" alt="Image of hidden video">
+	
+	<p>
 To turn your video back on, just click the camera button (now black) again. 
 </p>
 </div>
 
-<div class="lh-copy serif wi-100 plx">
-<p class="f4"><a name="class materials"><strong>How do I access class materials?</strong></a>
+<div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
+
+<div class="lh-copy serif wi-100">
+<p class="f3"><a name="class materials"><strong>How do I access class materials?</strong></a>
 </p>
 </div>
 
-<div class="plx cf lh-copy serif fw1"> 
+<div class="cf lh-copy serif fw1"> 
 <p class="f4">To access all your writing workshop materials, you need to be logged in to your <a href="https://app.joinoneroom.com/">OneRoom account</a>. Once logged in, you’ll be taken to your homepage where you’ll see the title of your workshop listed under “My Classes”.
-	<img src="img/Access class materials.png" style="width:1266px;height:559px" alt="Image of homepage">
-	</p>
+</p>
+
+	<img src="img/Access class materials.png" class="img wi-75-ns mhxl" alt="Image of homepage">
+	
 <p class="f4">
 To access all uploaded workshop materials, just click on the title of your class. 
 </p>
 </div>
 
-<div class="lh-copy serif wi-100 plx">
-<p class="f4"><strong>How do I upload my work?</strong>
+<div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
+
+<div class="lh-copy serif wi-100">
+<p class="f3"><strong>How do I upload my work?</strong>
 </p>
-<p><img src="img/View_class_materials.png" style="width:1266px;height:559px" alt="Image of viewing class materials">
-</p>
-<p><img src="img/browsing_file_upload.png" style="width:1266px;height:559px" alt="Image of browsing files for upload.">
-</p>
-<p>
-<img src="img/naming_uploads.png" style="width:1266px;height:559px" alt="Image of naming uploads.">
-</p>
+	
+	<img src="img/View_class_materials.png" class="img wi-75-ns mhxl" alt="Image of viewing class materials">
+
+<img src="img/browsing_file_upload.png" class="img wi-75-ns mhxl" alt="Image of browsing files for upload.">
+
+<img src="img/naming_uploads.png" class="img wi-75-ns mhxl" alt="Image of naming uploads.">
 
 </div>
 
-<div class="plx cf lh-copy serif fw1"> 
+<div class="cf lh-copy serif fw1"> 
 <p class="f4">First, you will need to be on the <a href="#class materials" style=color:"#41BDE5">class materials page</a>.
 </p>
 </div>
 
-<div class="lh-copy serif wi-100 plx">
-<p class="f4"><strong>How do I delete my work?</strong>
+<div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
+
+<div class="lh-copy serif wi-100">
+<p class="f3"><strong>How do I delete my work?</strong>
 </p>
 </div>
 
-<div class="plx cf lh-copy serif fw1"> 
-<p class="f4"><img src="img/completed_or_delete_uploaded_work.png" style="width:1266px;height:559px" alt="Picture of delete button">
-</p>
+<div class="cf lh-copy serif fw1"> 
+<img src="img/completed_or_delete_uploaded_work.png" class="img wi-75-ns mhxl" alt="Picture of delete button">
 
-<p class="f4">
-<img src="img/delete_upload.png" style="width:1266px;height:559px" alt="Image of deleting upload">
+<img src="img/delete_upload.png" class="img wi-75-ns mhxl" alt="Image of deleting upload">
+</div>
+
+<div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
+
+<div class="lh-copy serif wi-100">
+<p class="f3"><strong>Recommended practices:</strong>
 </p>
 </div>
 
-<div class="lh-copy serif wi-100 plx">
-<p class="f4"><strong>Recommended practices:</strong>
-</p>
-</div>
-
-<div class="plx cf lh-copy serif fw1"> 
+<div class="cf lh-copy serif fw1"> 
 <p class="f4"><ul>
 	<li>When in a live video class, it’s best to use headphones with a mic. This will help others hear you more clearly and cut down on excess background noise (you’ll hear others better too!).</li>
 	<br>
 	<li>Close other programs and tabs on your computer. The less your computer has to manage, the better! Sometimes having too many things running on your computer can decrease your video and audio quality. </li>
 </ul>
 </p>
+</div>
+
 </div>
