formatting and uploading images

--- a/faq.html
+++ b/faq.html
@@ -21,6 +21,7 @@ title: FAQs
 
 <div class="mw10 phl phn-ns cf bt b--light-gray ptm mtx">
 
+
 <div class="lh-copy serif wi-100">
 <p class="f3"><strong>How do I mute myself?</strong>
 </p>
@@ -108,10 +109,10 @@ On the right side of the uploads page, you will see a grey upload button.
 <img src="img/browsing_file_upload.png" class="img wi-75-ns mhxl" alt="Image of browsing files for upload.">
 
 <p class="f4"> 
-Last, fill in the title and author of the work.
+Last, fill in the title and author of the work and click the "publish" button.
 </p>
 
-<img src="img/naming_uploads.png" class="img wi-75-ns mhxl" alt="Image of naming uploads.">
+<img src="img/publish_upload.png" class="img wi-75-ns mhxl" alt="Image of upload ready to publish.">
 
 </div>
 
@@ -124,7 +125,16 @@ Last, fill in the title and author of the work.
 </div>
 
 <div class="cf lh-copy serif fw1"> 
+<p class="f4"> To delete any of your uploads, you need to be on the class materials page. 
+</p>
+
+<p class="f4">Next to all of your uploads, you will see a small trash can icon on the right side. To delete, click the trash icon. 
+</p>
+
 <img src="img/completed_or_delete_uploaded_work.png" class="img wi-75-ns mhxl" alt="Picture of delete button">
+
+<p class="f4"> You will be prompted to confirm. After confirming by clicking “delete”, your upload will be removed from the class materials page. 
+</p>
 
 <img src="img/delete_upload.png" class="img wi-75-ns mhxl" alt="Image of deleting upload">
 </div>
