adding scott edits

--- a/faq.html
+++ b/faq.html
@@ -14,13 +14,23 @@ title: FAQs
 </div>
 
 <div class="cf lh-copy serif wi-100 fw1"> 
-<p class="f4">Right now OneRoom only runs on Google Chrome. We don’t (yet) run on other browsers or devices other than computers. </p>
+<p class="f4">Since OneRoom is based on <a href="https://en.wikipedia.org/wiki/WebRTC#Support" target="_blank">WebRTC</a>, our live classroom requires Google Chrome. (Firefox may work but no guarantees!). We don’t yet support other browsers or mobile devices like phones and tablets.</p>
 <p class="f4">If you don't already have Google Chrome on your computer, <a href="https://www.google.com/chrome/browser/desktop/" target="_blank">download it here!</a>
 </p>
 </div>
 
 <div class="mw10 phl phn-ns cf bt b--light-gray ptm mtx">
 
+<div class="lh-copy serif wi-100">
+<p class="f3"><strong>What are the minimum system requirements?</strong>
+</p>
+</div>
+<div class="cf lh-copy serif wi-100 fw1"> 
+<p class="f4">Live video with a group is bandwidth- and computer-resource intensive, so you’ll need a relatively modern computer, a broadband internet connection, and a working webcam.
+</p>
+</div>
+
+<div class="mw10 phl phn-ns cf bt b--light-gray ptm mtx">
 
 <div class="lh-copy serif wi-100">
 <p class="f3"><strong>How do I mute myself?</strong>
@@ -149,6 +159,9 @@ Last, fill in the title and author of the work and click the "publish" button.
 <div class="cf lh-copy serif fw1"> 
 <p class="f4"><ul>
 	<li>When in a live video class, it’s best to use headphones with a mic. This will help others hear you more clearly and cut down on excess background noise (you’ll hear others better too!).</li>
+	<br>
+	<li>You should mute yourself when you’re not speaking if you’re in a place with a lot of background noise (or if you need to cough!). 
+	</li>
 	<br>
 	<li>Close other programs and tabs on your computer. The less your computer has to manage, the better! Sometimes having too many things running on your computer can decrease your video and audio quality. </li>
 </ul>
