add gif to web page

--- a/faq.html
+++ b/faq.html
@@ -42,14 +42,11 @@ title: FAQs
 </p>
 <p class="f4">You'll find the mute button in the gray bar located above the videos in your live class. The mute button looks like a mini microphone icon, and appears light gray when deactivated.
 </p>
-
-	<img src="img/locate_mute.png" class="img wi-75-ns mhxl" alt="Finding the mute button.">
-	
 <p>
 When you click the button and mute yourself, you will see the microphone button turn black and a red microphone icon will appear in the top right corner of your video box.
 	</p>
 	
-	<img src="img/mute_view.png" class="img wi-75-ns mhxl" alt="What it looks like to be muted.">
+	<img src="img/mute.gif" class="img wi-75-ns mhxl" alt="Demonstration of mute.">
 	
 <p class="f4">
 To un-mute yourself, simply click the black microphone button again!  
