--- a/faq.html
+++ b/faq.html
@@ -105,11 +105,9 @@ To access all uploaded workshop materials, just click on the title of your class
 On the right side of the uploads page, you will see a grey upload button. 
 </p>
 
-	<img src="img/View_class_materials.png" class="img wi-75-ns mhxl" alt="Image of viewing class materials">
-
 <p class="f4"> Once you click the button, an upload drawer will open up on the right side. 
 </p>
-	<img src="img/upload_drawer.png" class="img wi-75-ns mhxl" alt="Image of upload draw open.">
+	<img src="img/upload.gif" class="img wi-75-ns mhxl" alt="Demonstration of uploading.">
 
 <p class="f4">Next, click “browse” to find the file you want to upload from your computer. Or, you can find the file separately and then drag and drop it into the upload drawer.
 </p>
